Added dockerfiles and updated requirements

--- a/.env
+++ b/.env
@@ -25,6 +25,11 @@ REDIS_CHANNEL=log_channel
 
 #login details
 # USERNAME    PASSWORD
-admin Admin123
-hng HngTech
-user Password
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=Admin123
+
+HNG_USERNAME=hng
+HNG_PASSWORD=HngTech
+
+USER_USERNAME=user
+USER_PASSWORD=Password
