--- a/log-message-processor/Dockerfile
+++ b/log-message-processor/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt .
+# First install C dependencies needed for thriftpy2
+RUN apt-get update && apt-get install -y gcc python3-dev
 RUN pip install -r requirements.txt
 COPY . .
 CMD ["python", "main.py"]
