Updated docker-compose and dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,103 +1,160 @@
+version: "3.8"
+
 services:
   traefik:
-    image: traefik:v3.3
+    image: traefik:v2
+    container_name: traefik
+    restart: unless-stopped
     command:
-      - "--api.insecure=false"
+      # provider
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      # metrics
+      - "--metrics.prometheus=true"
+      - "--metrics.prometheus.buckets=0.1,0.3,1.2,5.0"
+      - "--log.level=ERROR"
+      # logs
+      - "--accesslog=true"
+      # entrypoints
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.email=richard.atodo@gmail.com"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      # certificatesresolvers
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--certificatesresolvers.myresolver.acme.email=email@admin.com"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+    expose:
+      - "8080"
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./letsencrypt:/letsencrypt"
-    networks:
-      - app-network
-
-  redis:
-    image: redis:alpine
-    networks:
-      - app-network
+      - traefik_letsencrypt:/letsencrypt
 
   frontend:
-    build: ./frontend
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`www.rykard.name.com`)"
-      - "traefik.http.routers.frontend.entrypoints=websecure"
-      - "traefik.http.routers.frontend.tls.certresolver=myresolver"
-      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+    build:
+      context: ./frontend
+    environment:
+      - AUTH_API_ADDRESS=http://auth-api:8081
+      - TODOS_API_ADDRESS=http://todos-api:8082
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - auth-api
       - todos-api
-      - users-api
-    networks:
-      - app-network
+    command: npm run dev
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.frontend.loadbalancer.server.port=8080"
+      - "traefik.http.routers.frontend-http.entrypoints=web"
+      - "traefik.http.routers.frontend-http.rule=Host(`prestastack.com`)"
+      - "traefik.http.routers.frontend-http.service=frontend"
+      # tls
+      - "traefik.http.routers.frontend-https.tls=true"
+      - "traefik.http.routers.frontend-https.tls.certresolver=myresolver"
+      - "traefik.http.routers.frontend-https.entrypoints=websecure"
+      - "traefik.http.routers.frontend-https.rule=Host(`rykard.duckdns.org`)"
+      - "traefik.http.routers.frontend-https.service=frontend"
+      # tls redirect
+      - "traefik.http.routers.frontend-http.middlewares=redirect-https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.scheme=https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.permanent=true"
 
   auth-api:
-    build: ./auth-api
+    build:
+      context: ./auth-api
+    ports:
+      - "${AUTH_API_PORT}:8081"
     environment:
-      - REDIS_URL=redis:6379
+      - AUTH_API_PORT=${AUTH_API_PORT}
+      - JWT_SECRET=${JWT_SECRET}
+      - USERS_API_ADDRESS=${USERS_API_ADDRESS}
     depends_on:
-      - redis
+      - users-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.auth.rule=Host(`auth.rykard.name.com`)"
-      - "traefik.http.routers.auth.entrypoints=websecure"
-      - "traefik.http.routers.auth.tls.certresolver=myresolver"
-      - "traefik.http.services.auth.loadbalancer.server.port=8080"
-    networks:
-      - app-network
+      - "traefik.http.routers.authapi-http.entrypoints=web"
+      - "traefik.http.routers.authapi-http.rule=Host(`auth.rykard.duckdns.org`)"
+      # tls
+      - "traefik.http.routers.authapi-https.tls=true"
+      - "traefik.http.routers.authapi-https.tls.certresolver=myresolver"
+      - "traefik.http.routers.authapi-https.entrypoints=websecure"
+      - "traefik.http.routers.authapi-https.rule=Host(`auth.rykard.duckdns.org`)"
+      # tls redirect
+      - "traefik.http.routers.authapi-http.middlewares=redirect-https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.scheme=https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.permanent=true"
 
   todos-api:
-    build: ./todos-api
+    build:
+      context: ./todos-api
+    ports:
+      - "${TODOS_API_PORT}:8082"
     environment:
-      - REDIS_URL=redis://redis:6379
+      - TODOS_API_PORT=${TODOS_API_PORT}
+      - JWT_SECRET=${JWT_SECRET}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_CHANNEL=${REDIS_CHANNEL}
     depends_on:
-      - redis
-      - auth-api
+      - redis-queue
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.todos.rule=Host(`todos.rykard.name.com`)"
-      - "traefik.http.routers.todos.entrypoints=websecure"
-      - "traefik.http.routers.todos.tls.certresolver=myresolver"
-      - "traefik.http.services.todos.loadbalancer.server.port=8081"
-    networks:
-      - app-network
+      - "traefik.http.routers.todosapi-http.entrypoints=web"
+      - "traefik.http.routers.todosapi-http.rule=Host(`todos.prestastack.com`)"
+      # tls
+      - "traefik.http.routers.todosapi-https.tls=true"
+      - "traefik.http.routers.todosapi-https.tls.certresolver=myresolver"
+      - "traefik.http.routers.todosapi-https.entrypoints=websecure"
+      - "traefik.http.routers.todosapi-https.rule=Host(`todos.rykard.duckdns.org`)"
+      # tls redirect
+      - "traefik.http.routers.todosapi-http.middlewares=redirect-https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.scheme=https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.permanent=true"
 
   users-api:
-    build: ./users-api
+    build:
+      context: ./users-api
+    ports:
+      - "${SERVER_PORT}:8083"
     environment:
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
-    depends_on:
-      - redis
-      - auth-api
+      - SERVER_PORT=${SERVER_PORT}
+      - JWT_SECRET=${JWT_SECRET}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.users.rule=Host(`users.rykard.name.com`)"
-      - "traefik.http.routers.users.entrypoints=websecure"
-      - "traefik.http.routers.users.tls.certresolver=myresolver"
-      - "traefik.http.services.users.loadbalancer.server.port=8082"
-    networks:
-      - app-network
+      - "traefik.http.routers.usersapi-http.entrypoints=web"
+      - "traefik.http.routers.usersapi-http.rule=Host(`users.rykard.duckdns.org`)"
+      # tls
+      - "traefik.http.routers.usersapi-https.tls=true"
+      - "traefik.http.routers.usersapi-https.tls.certresolver=myresolver"
+      - "traefik.http.routers.usersapi-https.entrypoints=websecure"
+      - "traefik.http.routers.usersapi-https.rule=Host(`users.rykard.duckdns.org`)"
+      # tls redirect
+      - "traefik.http.routers.usersapi-http.middlewares=redirect-https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.scheme=https"
+      - "traefik.http.middlewares.redirect-https.redirectScheme.permanent=true"
 
   log-processor:
-    build: ./log-message-processor
+    build:
+      context: ./log-message-processor
     environment:
-      - REDIS_URL=redis://redis:6379
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_CHANNEL=${REDIS_CHANNEL}
     depends_on:
-      - redis
-    networks:
-      - app-network
+      - redis-queue
 
-networks:
-  app-network:
-    driver: bridge
+  redis-queue:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  traefik_letsencrypt:
+  redis_data:
