--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ JWT_SECRET=myfancysecret
 USERS_API_ADDRESS=http://users-api:8083
 
 # todos-api:
+TODOS_API_PORT=8082
 JWT_SECRET=myfancysecret
 REDIS_HOST=redis-queue
 REDIS_PORT=6379
@@ -25,11 +26,6 @@ REDIS_CHANNEL=log_channel
 
 #login details
 # USERNAME    PASSWORD
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=Admin123
-
-HNG_USERNAME=hng
-HNG_PASSWORD=HngTech
-
-USER_USERNAME=user
-USER_PASSWORD=Password
+#admin Admin123
+#hng HngTech
+#user Password
