--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:14-alpine AS build
-WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
-COPY . .
-RUN npm run build
+FROM node:14
 
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-CMD ["nginx", "-g", "daemon off;"]
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+
 EXPOSE 80
+
+CMD ["npm", "run", "dev"]
